  the contactenation of products.

* Added post_operations argument to python harp.import_product() function.

* Besides using a polygon of >=3 vertices, a geospatial area can now also be
  defined via a bounding rect. Use e.g. 'latitude_bounds {time,2}' and
  'longitude_bounds {time,2}' to define the min/max of the bounding rect.

* Add derivation for tropospheric/stratospheric column from partial column
  profile and tropopause.

* Corrected derivation for calculating tropopause altitude/pressure.

* Added support for scene albedo/pressure/type variables.

* Fix problem in matlab mex extension determination on linux when using the
  configure script.

* Added format, variable count, and dimension sizes to harpcheck output.

* Added support for TCCON products in GEOMS format.

* Updates to ESACCI_OZONE_L2_TC, GEOMS FTIR, GOME2 L2, OMI L2 NO2, QA4ECV, and
  S5P L2 product ingestions.

* Updated embedded expat library to version 2.2.6.

1.5 2018-12-17
~~~~~~~~~~~~~~

* Fixed issue where vertical smoothing/regridding provided invalid results if
  input variables were available as float instead of double data.

* harp_product_get_derived_variable() no longer converts data to double if
  no data type was provided and data already had the right unit.

* Fixed issue where listing derivations for a specific variable would not show
  all possible conversions.

* Add derivation for cloud height from cloud base/top height.

* Added support for Dobson, Pandora and Sonde products in GEOMS format.

* Updates to ACE-FTS, GOME/GOME-2 L2, and S5P L2 product ingestions.

1.4 2018-09-28
~~~~~~~~~~~~~~

* Added -t/--target option to harpdump --list-derivations.

* Added variable_name parameter to harp_doc_list_conversions().

* Added support for meridional/zonal wind speed, and planetary boundary layer
  height variables.

* Added support for sic (Shannon information content) variables for vertical
  profiles.

* Aerosol optical depth and extinction coefficient variables will now