@@ -317,7 +317,18 @@ int harp_path_for_program(const char *argv0, char **location)
 #ifdef WIN32
         int argv0_length = (int)strlen(argv0);
 
-        if (argv0_length <= 4 || strcmp(&argv0[argv0_length - 4], ".exe") != 0)
+        if (harp_path_find_file(".", argv0, location) != 0)
+        {
+            return -1;
+        }
+        if (*location == NULL && getenv("PATH") != NULL)
+        {
+            if (harp_path_find_file(getenv("PATH"), argv0, location) != 0)
+            {
+                return -1;
+            }
+        }
+        if (*location == NULL && (argv0_length <= 4 || strcmp(&argv0[argv0_length - 4], ".exe") != 0))
         {
             char *filepath;
 
@@ -344,20 +355,6 @@ int harp_path_for_program(const char *argv0, char **location)
                 }
             }
             free(filepath);
-        }
-        else
-        {
-            if (harp_path_find_file(".", argv0, location) != 0)
-            {
-                return -1;
-            }
-            if (*location == NULL && getenv("PATH") != NULL)
-            {
-                if (harp_path_find_file(getenv("PATH"), argv0, location) != 0)
-                {
-                    return -1;
-                }
-            }
         }
 #else
         if (getenv("PATH") != NULL)
